--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@ hr {
     margin: 50px 0;
 }
 
+input {
+    margin-left: 10px;
+}
+
 #app button {
     display: block;
     margin: 10px;
@@ -9,9 +13,6 @@ hr {
 
 #keyModifier form div {
     margin: 10px;
-}
-#keyModifier input {
-    margin-left: 10px;
 }
 
 #keyModifier form small {
@@ -26,4 +27,8 @@ hr {
     width: 300px;
     height: 300px;
     border: solid 1px blueviolet;
+}
+
+#example input[type="checkbox"] {
+    margin-right: 20px;
 }
