--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 hr {
     margin: 50px 0;
 }
@@ -49,4 +53,21 @@ input {
 }
 .panel.blue {
     border: solid 1px royalblue;
+}
+
+#bind div.big {
+    width: 300px;
+    height: 300px;
+}
+
+#bind div.color {
+    background-color: palevioletred;
+}
+
+#bind div.frame {
+    border: solid 5px purple;
+}
+
+[v-cloak] {
+    display: none;
 }
